--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
